refactor communication protocols to use json